# webcount

./: .deploy  .deploy-hooks.sh  .gitignore  LICENSE  README.md  manage.py  pyproject.toml
tricount/: asgi.py  production_settings.py  settings.py  urls.py  wsgi.py
tricount_proxy/: apps.py  urls.py  views.py
tricount_proxy/locale/fr/LC_MESSAGES/: django.po
tricount_proxy/services/: context.py  register.py  tricount_api.py
tricount_proxy/static/: site.webmanifest
tricount_proxy/static/css/: base.css  detail.css  home.css  reset.css
tricount_proxy/templates/: base.html  home.html  tricount_detail.html
tricount_proxy/templatetags/: money.py
